echange des animations des carte menu avec ce de la confirmation

--- a/restaurants/confirmation.html
+++ b/restaurants/confirmation.html
@@ -24,7 +24,7 @@
         </div>
         <div class="confirmWrapper__box">
             <h3 class="confirmWrapper__box--title">Vos choix<span class="confirmWrapper__box--borderLeft"></span></h3>
-            <article class="menuCard even1s">
+            <article class="menuCard even">
                 <div class="menuCard__box">
                     <h4>Œuf au plat</h4>
                     <p>Assaisonné à la truffe sur lit de caviar</p>
@@ -33,7 +33,7 @@
             </article>
         </div>
         <div class="confirmWrapper__box">
-            <article class="menuCard even2s">
+            <article class="menuCard uneven">
                 <div class="menuCard__box">
                     <h4>Pigeonneau d’Ille-et-Vilaine</h4>
                     <p>Sur son lit de gnocchis aux légumes</p>
@@ -42,7 +42,7 @@
             </article>                 
         </div>
         <div class="confirmWrapper__box">
-            <article class="menuCard even3s">
+            <article class="menuCard even">
                 <div class="menuCard__box">
                     <h4>Tiramisu</h4>
                     <p>À la noisette</p>
@@ -52,7 +52,7 @@
         </div>
         <div class="confirmWrapper__box">
             <h3 class="confirmWrapper__box--title">Prix ttc<span class="confirmWrapper__box--borderLeft"></span></h3>
-            <article class="menuCard even4s">
+            <article class="menuCard uneven">
                 <div class="menuCard__box">
                     <h4>Total</h4>
                 </div>
