--- a/restaurants/la_note.html
+++ b/restaurants/la_note.html
@@ -43,7 +43,7 @@
         </div>
         <div class="menuWrapper__box">
             <h3 class="menuWrapper__box--title">Entrées<span class="menuWrapper__box--borderLeft"></span></h3>
-            <article class="menuCard even">
+            <article class="menuCard even1">
                 <div class="menuCard__box">
                     <h4>Ravioles de foie gras</h4>
                     <p>Accompagnées de leur crème à la truffe</p>
@@ -53,7 +53,7 @@
                     <img class="menuCard__selectBtn--check" src="../assets/images/icon/check.svg" alt="check icon">
                 </div>
             </article>
-            <article class="menuCard uneven">
+            <article class="menuCard even2">
                 <div class="menuCard__box">
                     <h4>Caviar osciètre</h4>
                     <p>Sur blini à la farine de blé noir</p>
@@ -63,7 +63,7 @@
                     <img class="menuCard__selectBtn--check" src="../assets/images/icon/check.svg" alt="check icon">
                 </div>
             </article>
-            <article class="menuCard even">
+            <article class="menuCard even3">
                 <div class="menuCard__box">
                     <h4>Homard et espuma de potiron</h4>
                     <p>Marinés aux zestes d'orange</p>
@@ -73,7 +73,7 @@
                     <img class="menuCard__selectBtn--check" src="../assets/images/icon/check.svg" alt="check icon">
                 </div>
             </article>
-            <article class="menuCard uneven">
+            <article class="menuCard even4">
                 <div class="menuCard__box">
                     <h4>Foie gras de canard cuit entier</h4>
                     <p>Confiture de figue et pain toasté</p>
@@ -86,7 +86,7 @@
         </div>
         <div class="menuWrapper__box">
             <h3 class="menuWrapper__box--title">Plats<span class="menuWrapper__box--borderLeft"></span></h3>
-            <article class="menuCard even">
+            <article class="menuCard even5">
                 <div class="menuCard__box">
                     <h4>Noix de coquilles Saint-Jacques</h4>
                     <p>Sur lit de purée de céleri-rave</p>
@@ -96,7 +96,7 @@
                     <img class="menuCard__selectBtn--check" src="../assets/images/icon/check.svg" alt="check icon">
                 </div>
             </article>
-            <article class="menuCard uneven">
+            <article class="menuCard even6">
                 <div class="menuCard__box">
                     <h4>Langoustine poêlée</h4>
                     <p>Purée de patate douce</p>
@@ -106,7 +106,7 @@
                     <img class="menuCard__selectBtn--check" src="../assets/images/icon/check.svg" alt="check icon">
                 </div>
             </article>
-            <article class="menuCard even">
+            <article class="menuCard even7">
                 <div class="menuCard__box">
                     <h4>Mijoté de queue de bœuf</h4>
                     <p>Et riz sauvage aux zestes de citron</p>
@@ -119,7 +119,7 @@
         </div>
         <div class="menuWrapper__box">
             <h3 class="menuWrapper__box--title">Desserts<span class="menuWrapper__box--borderLeft"></span></h3>
-            <article class="menuCard uneven">
+            <article class="menuCard even8">
                 <div class="menuCard__box">
                     <h4>Macaron noisette et chocolat</h4>
                     <p>Glace au caramel brun et sel de Guérande</p>
@@ -129,7 +129,7 @@
                     <img class="menuCard__selectBtn--check" src="../assets/images/icon/check.svg" alt="check icon">
                 </div>
             </article>
-            <article class="menuCard even">
+            <article class="menuCard even9">
                 <div class="menuCard__box">
                     <h4>Baba au rhum revisité</h4>
                     <p>Avec son coulis de citron</p>
@@ -139,7 +139,7 @@
                     <img class="menuCard__selectBtn--check" src="../assets/images/icon/check.svg" alt="check icon">
                 </div>
             </article>
-            <article class="menuCard uneven">
+            <article class="menuCard even10">
                 <div class="menuCard__box">
                     <h4>Tarte au citron meringuée</h4>
                     <p>Déstructurée</p>
