--- a/restaurants/le_delice.html
+++ b/restaurants/le_delice.html
@@ -43,7 +43,7 @@
         </div>
         <div class="menuWrapper__box">
             <h3 class="menuWrapper__box--title">Entrées<span class="menuWrapper__box--borderLeft"></span></h3>
-            <article class="menuCard even">
+            <article class="menuCard even1">
                 <div class="menuCard__box">
                     <h4>Tartare de thon</h4>
                     <p>Assaisonné au yuzu</p>
@@ -53,7 +53,7 @@
                     <img class="menuCard__selectBtn--check" src="../assets/images/icon/check.svg" alt="check icon">
                 </div>
             </article>
-            <article class="menuCard uneven">
+            <article class="menuCard even2">
                 <div class="menuCard__box">
                     <h4>Bouchée de homard croustillant</h4>
                     <p>Et sa farandole de petits légumes</p>
@@ -63,7 +63,7 @@
                     <img class="menuCard__selectBtn--check" src="../assets/images/icon/check.svg" alt="check icon">
                 </div>
             </article>
-            <article class="menuCard even">
+            <article class="menuCard even3">
                 <div class="menuCard__box">
                     <h4>Velouté de cèpes</h4>
                     <p>Aux truffes</p>
@@ -76,7 +76,7 @@
         </div>
         <div class="menuWrapper__box">
             <h3 class="menuWrapper__box--title">Plats<span class="menuWrapper__box--borderLeft"></span></h3>
-            <article class="menuCard uneven">
+            <article class="menuCard even4">
                 <div class="menuCard__box">
                     <h4>Poulet rôti aux herbes de Provence</h4>
                     <p>Et sa crème de truffe</p>
@@ -86,7 +86,7 @@
                     <img class="menuCard__selectBtn--check" src="../assets/images/icon/check.svg" alt="check icon">
                 </div>
             </article>
-            <article class="menuCard even">
+            <article class="menuCard even5">
                 <div class="menuCard__box">
                     <h4>Langouste rôtie</h4>
                     <p>Et ses légumes de saison</p>
@@ -96,7 +96,7 @@
                     <img class="menuCard__selectBtn--check" src="../assets/images/icon/check.svg" alt="check icon">
                 </div>
             </article>
-            <article class="menuCard uneven">
+            <article class="menuCard even6">
                 <div class="menuCard__box">
                     <h4>Côte de bœuf Angus</h4>
                     <p>Et sa purée de panais</p>
@@ -109,7 +109,7 @@
         </div>
         <div class="menuWrapper__box">
             <h3 class="menuWrapper__box--title">Desserts<span class="menuWrapper__box--borderLeft"></span></h3>
-            <article class="menuCard even">
+            <article class="menuCard even7">
                 <div class="menuCard__box">
                     <h4>Farandole de desserts</h4>
                     <p>Du chef</p>
@@ -119,7 +119,7 @@
                     <img class="menuCard__selectBtn--check" src="../assets/images/icon/check.svg" alt="check icon">
                 </div>
             </article>
-            <article class="menuCard uneven">
+            <article class="menuCard even8">
                 <div class="menuCard__box">
                     <h4>Crème brulée</h4>
                     <p>Revisitée</p>
@@ -129,7 +129,7 @@
                     <img class="menuCard__selectBtn--check" src="../assets/images/icon/check.svg" alt="check icon">
                 </div>
             </article>
-            <article class="menuCard even">
+            <article class="menuCard even9">
                 <div class="menuCard__box">
                     <h4>Tiramisu</h4>
                     <p>À la noisette</p>
