--- a/restaurants/la_francaise.html
+++ b/restaurants/la_francaise.html
@@ -43,7 +43,7 @@
         </div>
         <div class="menuWrapper__box">
             <h3 class="menuWrapper__box--title">Entrées<span class="menuWrapper__box--borderLeft"></span></h3>
-            <article class="menuCard even">
+            <article class="menuCard even1">
                 <div class="menuCard__box">
                     <h4>Tartare de poulpe acidulé</h4>
                     <p>Aux zestes d'orange</p>
@@ -53,7 +53,7 @@
                     <img class="menuCard__selectBtn--check" src="../assets/images/icon/check.svg" alt="check icon">
                 </div>
             </article>
-            <article class="menuCard uneven">
+            <article class="menuCard even2">
                 <div class="menuCard__box">
                     <h4>Velouté de légumes d'antan</h4>
                     <p>Carotte, panais, topinambour</p>
@@ -63,7 +63,7 @@
                     <img class="menuCard__selectBtn--check" src="../assets/images/icon/check.svg" alt="check icon">
                 </div>
             </article>
-            <article class="menuCard even">
+            <article class="menuCard even3">
                 <div class="menuCard__box">
                     <h4>Soupe à l'oignon</h4>
                     <p>Revisitée</p>
@@ -76,7 +76,7 @@
         </div>
         <div class="menuWrapper__box">
             <h3 class="menuWrapper__box--title">Plats<span class="menuWrapper__box--borderLeft"></span></h3>
-            <article class="menuCard uneven">
+            <article class="menuCard even4">
                 <div class="menuCard__box">
                     <h4>Coquilles Saint-Jacques</h4>
                     <p>Accompagnées d'une purée de panais</p>
@@ -86,7 +86,7 @@
                     <img class="menuCard__selectBtn--check" src="../assets/images/icon/check.svg" alt="check icon">
                 </div>
             </article>
-            <article class="menuCard even">
+            <article class="menuCard even5">
                 <div class="menuCard__box">
                     <h4>Magret de canard</h4>
                     <p>Et parmentier de pommes de terre</p>
@@ -96,7 +96,7 @@
                     <img class="menuCard__selectBtn--check" src="../assets/images/icon/check.svg" alt="check icon">
                 </div>
             </article>
-            <article class="menuCard uneven">
+            <article class="menuCard even6">
                 <div class="menuCard__box">
                     <h4>Pigeonneau d’Ille-et-Vilaine</h4>
                     <p>Sur son lit de gnocchis aux légumes</p>
@@ -109,7 +109,7 @@
         </div>
         <div class="menuWrapper__box">
             <h3 class="menuWrapper__box--title">Desserts<span class="menuWrapper__box--borderLeft"></span></h3>
-            <article class="menuCard even">
+            <article class="menuCard even7">
                 <div class="menuCard__box">
                     <h4>Pétales de violettes glacés</h4>
                     <p>Et purée de noisettes</p>
@@ -119,7 +119,7 @@
                     <img class="menuCard__selectBtn--check" src="../assets/images/icon/check.svg" alt="check icon">
                 </div>
             </article>
-            <article class="menuCard uneven">
+            <article class="menuCard even8">
                 <div class="menuCard__box">
                     <h4>Fondant au chocolat</h4>
                     <p>Revisité</p>
@@ -129,7 +129,7 @@
                     <img class="menuCard__selectBtn--check" src="../assets/images/icon/check.svg" alt="check icon">
                 </div>
             </article>
-            <article class="menuCard even">
+            <article class="menuCard even9">
                 <div class="menuCard__box">
                     <h4>Millefeuille croustillant</h4>
                     <p>Myrtilles et pâte d’amande</p>
