--- a/restaurants/la_palette.html
+++ b/restaurants/la_palette.html
@@ -43,7 +43,7 @@
         </div>
         <div class="menuWrapper__box">
             <h3 class="menuWrapper__box--title">Entrées<span class="menuWrapper__box--borderLeft"></span></h3>
-            <article class="menuCard even">
+            <article class="menuCard even1">
                 <div class="menuCard__box">
                     <h4>Fricassée d'escargots</h4>
                     <p>Au piment d'Espelette</p>
@@ -53,7 +53,7 @@
                     <img class="menuCard__selectBtn--check" src="../assets/images/icon/check.svg" alt="check icon">
                 </div>
             </article>
-            <article class="menuCard uneven">
+            <article class="menuCard even2">
                 <div class="menuCard__box">
                     <h4>Foie gras de canard mi-cuit</h4>
                     <p>Et ses copeaux de truffe noire</p>
@@ -63,7 +63,7 @@
                     <img class="menuCard__selectBtn--check" src="../assets/images/icon/check.svg" alt="check icon">
                 </div>
             </article>
-            <article class="menuCard even">
+            <article class="menuCard even3">
                 <div class="menuCard__box">
                     <h4>Œuf au plat</h4>
                     <p>Assaisonné à la truffe sur lit de caviar</p>
@@ -76,7 +76,7 @@
         </div>
         <div class="menuWrapper__box">
             <h3 class="menuWrapper__box--title">Plats<span class="menuWrapper__box--borderLeft"></span></h3>
-            <article class="menuCard uneven">
+            <article class="menuCard even4">
                 <div class="menuCard__box">
                     <h4>Filet de bœuf aux herbes</h4>
                     <p>Accompagné de sa ribambelle de légumes</p>
@@ -86,7 +86,7 @@
                     <img class="menuCard__selectBtn--check" src="../assets/images/icon/check.svg" alt="check icon">
                 </div>
             </article>
-            <article class="menuCard even">
+            <article class="menuCard even5">
                 <div class="menuCard__box">
                     <h4>Parmentier de queue de bœuf</h4>
                     <p>À la truffe noire sur sa purée de panais</p>
@@ -96,7 +96,7 @@
                     <img class="menuCard__selectBtn--check" src="../assets/images/icon/check.svg" alt="check icon">
                 </div>
             </article>
-            <article class="menuCard uneven">
+            <article class="menuCard even6">
                 <div class="menuCard__box">
                     <h4>Filet de turbot</h4>
                     <p>Aux agrumes</p>
@@ -109,7 +109,7 @@
         </div>
         <div class="menuWrapper__box">
             <h3 class="menuWrapper__box--title">Desserts<span class="menuWrapper__box--borderLeft"></span></h3>
-            <article class="menuCard even">
+            <article class="menuCard even7">
                 <div class="menuCard__box">
                     <h4>Paris-Brest</h4>
                     <p>Revisité</p>
@@ -119,7 +119,7 @@
                     <img class="menuCard__selectBtn--check" src="../assets/images/icon/check.svg" alt="check icon">
                 </div>
             </article>
-            <article class="menuCard uneven">
+            <article class="menuCard even8">
                 <div class="menuCard__box">
                     <h4>Macaron au chocolat d'exception</h4>
                     <p>Et glace à la vanille de Madagascar</p>
@@ -129,7 +129,7 @@
                     <img class="menuCard__selectBtn--check" src="../assets/images/icon/check.svg" alt="check icon">
                 </div>
             </article>
-            <article class="menuCard even">
+            <article class="menuCard even9">
                 <div class="menuCard__box">
                     <h4>Mousse au chocolat</h4>
                     <p>Au piment d'Espelette et à la truffe noire</p>
